--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "GMTK.sln"
+    "dotnet.defaultSolution": "GMTK-Game-Jam-2024.sln"
 }
